--- a/portfolioProjects/Platzi/portfolio-1/styles.css
+++ b/portfolioProjects/Platzi/portfolio-1/styles.css
@@ -25,3 +25,15 @@ a{
     justify-content: space-between;
     width: 300px;
 }
+.header a:hover{
+    text-decoration: underline;
+}
+.main--container{
+    display: flex;
+    width: 75%;
+    margin: 20px auto;
+    justify-content: space-between;
+}
+main .main--containner .main--img{
+    width: 100%;
+}
