--- a/portfolioProjects/Platzi/portfolio-1/styles.css
+++ b/portfolioProjects/Platzi/portfolio-1/styles.css
@@ -50,3 +50,26 @@ main .main--container .main--img{
     font-size: 22px;
     margin-bottom: 15px;
 }
+.info--description{
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.main--links{
+    margin: 20px 0;
+}
+
+.main--link{
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin: 10px 5px;
+}
+
+.main--link__salmon{
+    background-color: salmon;
+    color: white;
+}
+.main--link__transparent{
+    text-decoration: underline;
+    color: black;
+}
