--- a/portfolioProjects/Platzi/portfolio-1/styles.css
+++ b/portfolioProjects/Platzi/portfolio-1/styles.css
@@ -73,3 +73,11 @@ main .main--container .main--img{
     text-decoration: underline;
     color: black;
 }
+.main--social-media{
+    display: flex;
+    align-items: center;
+}
+.main--social-media h2{
+    font-size: 16px;
+    margin-right: 10px;
+}
