--- a/portfolioProjects/Platzi/portfolio-1/projects.css
+++ b/portfolioProjects/Platzi/portfolio-1/projects.css
@@ -4,3 +4,13 @@
     border: 1px solid black;
     border-radius: 15px;
 }
+.project--img{
+    width: 100%;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
+}
+.project--description{
+    padding: 10px;
+    font-size: 14px;
+}
