--- a/portfolioProjects/Platzi/portfolio-1/projects.css
+++ b/portfolioProjects/Platzi/portfolio-1/projects.css
@@ -1,8 +1,8 @@
 .project-list li{
     width: 300px;
-    height: 200px;
     border: 1px solid black;
     border-radius: 15px;
+    font-size: 14px;
 }
 .project--img{
     width: 100%;
@@ -12,5 +12,9 @@
 }
 .project--description{
     padding: 10px;
-    font-size: 14px;
+}
+.project--technology{
+    padding: 5px 10px;
+    border-radius: 15px;
+    background-color: rgba(0, 0, 0, 0.2);
 }
