--- a/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/src/css/index.css
+++ b/portfolioProjects/Platzi/Engineer/challengePortfolio/portfolio-1/twitter-clon/src/css/index.css
@@ -15,3 +15,21 @@ h1.titles--title{
     font-size: 34px;
     margin-bottom: 15px;
 }
+
+.main--button{
+    padding: 10px;
+    border: 0;
+    border-radius: 20px;
+    font-size: 18px;
+    margin: 10px;
+    width: 300px;
+}
+.main--button__white{
+    border: 1px solid gray;
+    background: white;
+}
+
+.main--button__blue{
+    background-color: var(--brand-color);
+    color: white;
+}
