--- a/style.css
+++ b/style.css
@@ -20,3 +20,16 @@
 .helloBrother{
     background: brown;
 }
+
+a:link,
+a: visited,
+a:focus{
+    background: yellow;
+}
+a:hover{
+    background: orange;
+}
+a:active{
+    background: red;
+    color: white;
+}
