--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    background-color: #FFD700;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
 .header .site-title {
     font-size: 44px;
     font-size: 10vw;
@@ -31,6 +37,17 @@ a:active {
     color: white;
 }
 
-body{
-    background-color: #FFD700;
+a {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    background-color: #3498db;
+    color: #ffffff;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;;
+}
+a:hover {
+    background-color: #2980b9;
 }
