--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
 }
+h1 {
+    text-align: center;
+}
 .header .site-title {
     font-size: 44px;
     font-size: 10vw;
