--- a/style.css
+++ b/style.css
@@ -40,17 +40,19 @@ a:active {
     color: white;
 }
 
-a {
+.my_button {
     display: inline-block;
     padding: 10px 20px;
     font-size: 16px;
     text-align: center;
     text-decoration: none;
-    background-color: #3498db;
+    background-color: #011057;
     color: #ffffff;
     border-radius: 5px;
     transition: background-color 0.3s ease;;
+    margin-bottom: 10px;
 }
+
 a:hover {
     background-color: #2980b9;
 }
