--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+
+    height: 100vh;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 h1 {
     text-align: center;
