--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 body {
-    background-color: #FFD700;
+    background-color: rgb(0, 0, 0);
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
     height: 100vh;
     margin-left: 10%;
     margin-right: 10%;
+    color: white;
 }
+.manuelortizus{
+    color: Gold;
+}
+
 h1 {
     text-align: center;
 }
@@ -49,7 +54,7 @@ a:active {
     font-size: 16px;
     text-align: center;
     text-decoration: none;
-    background-color: #011057;
+    background-color: rgb(255, 47, 0);
     color: #ffffff;
     border-radius: 5px;
     transition: background-color 0.3s ease;;
